<resources>
    <string name="about_author">Author</string>
    <string name="about_country">Spain</string>
    <string name="about_license">License</string>
    <string name="about_my_question">My question</string>
    <string name="about_send_email">Send email</string>
    <string name="about_version">Version</string>
    <string name="about_view_source_code">View source code in GitHub</string>
    <string name="action_add">Add</string>
    <string name="action_add_exercise_description">Add exercise</string>
    <string name="action_add_tag_description">Add tag</string>
    <string name="action_all_exercises">All Exercises</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_exercise_list">Exercise List</string>
    <string name="action_filter_all">All</string>
    <string name="action_filter_correct">Correct</string>
    <string name="action_filter_incorrect">Incorrect</string>
    <string name="action_import_exercises">Import exercises</string>
    <string name="action_select_a_file">Select a file</string>
    <string name="action_show_me_the_help">Show me the help</string>
    <string name="action_less_practiced_exercises">Less practiced exercises</string>
    <string name="action_listen">Listen</string>
    <string name="action_most_failed_exercises">Most Failed Exercises</string>
    <string name="action_next">Next</string>
    <string name="action_no">No</string>
    <string name="action_practice">Practice</string>
    <string name="action_previous">Previous</string>
    <string name="action_random_exercises">Random Exercises</string>
    <string name="action_save">Save</string>
    <string name="action_scroll_to_top_description">Scroll to top</string>
    <string name="action_select_a_filter">Select a filter</string>
    <string name="action_select_tag">Select One Tag</string>
    <string name="action_settings">Settings</string>
    <string name="action_short_alphabetically_asc">Alphabetically ascending</string>
    <string name="action_short_alphabetically_desc">Alphabetically descending</string>
    <string name="action_short_correct">More correct</string>
    <string name="action_short_incorrect">More incorrect</string>
    <string name="action_show_exercise_attempts">Show attempts</string>
    <string name="action_show_exercise_incorrect_attempts">Show incorrect attempts</string>
    <string name="action_sort_less_practiced">Less practiced</string>
    <string name="action_sort_more_practice">More practiced</string>
    <string name="action_sort_success_rate_asc">Success rate ascending</string>
    <string name="action_sort_success_rate_desc">Success rate descending</string>
    <string name="action_speak">Speak</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_tag_list">Tag List</string>
    <string name="action_word_list">Word List</string>
    <string name="action_yes">Yes</string>
    <string name="app_name">Speaking Practice</string>
    <string name="exercise_list_menu_button_description">Menu button</string>
    <string name="exercise_result_description">Exercise result</string>
    <string name="msg_delete_exercise_attempt_confirmation">Are you sure you want to delete the exercise attempt?</string>
    <string name="msg_delete_exercise_confirmation">Are you sure you want to delete the exercise?</string>
    <string name="msg_delete_selected_exercises_confirmation">Are you sure you want to delete the selected exercises?</string>
    <string name="msg_delete_selected_tags_confirmation">Are you sure you want to delete the selected tags?</string>
    <string name="msg_delete_tag_confirmation">Are you sure you want to delete this tag?</string>
    <string name="msg_error_cannot_be_empty">Cannot be empty</string>
    <string name="msg_error_initialization_failed">TTS Initialization failed!</string>
    <string name="msg_error_speech_recognizer_insufficient_permissions">Make sure the Google app has permission to record audio</string>
    <string name="msg_error_tts">Error in the Text to Speech engine</string>
    <string name="msg_error_voice_recognition_not_supported">Voice recognition is not supported</string>
    <string name="msg_rationale_permission_record_audio">This application needs to record audio for voice recognition.</string>
    <string name="msg_read_exercise_sentence">Read the exercise sentence</string>
    <string name="msg_replace_previous_exercises">Do you want to replace all the previous exercises?</string>
    <string name="number_format">%1$,d</string>
    <string name="msg_exercises_imported_successfully">%1$,d exercises imported successfully</string>
    <string name="msg_exercises_exported_successfully">%1$,d exercises exported successfully</string>
    <string name="percent_format">%1$d%%</string>
    <string name="practice_fragment_label">Speaking Practice</string>
    <string name="pref_collect_statistics" translatable="false">collect_statistics</string>
    <string name="pref_daily_goal">daily_goal</string>
    <string name="pref_enable_sound">enable_sound</string>
    <string name="pref_enable_speak_phrase">enable_speak_phrase</string>
    <string name="pref_enable_move_to_next_exercise">enable_move_next_exercise</string>
    <string name="pref_exercises_per_round" translatable="false">exercises_per_round</string>
    <string name="pref_privacy_policy">Privacy policy</string>
    <string name="summary_collect_statistics">Submit anonymous usage statistics and error reports to help improve this app. No personal data will be collected.</string>
    <string name="summary_daily_goal">Set the number of exercises for your daily goal.</string>
    <string name="summary_enable_sound">Play sounds when practice exercises.</string>
    <string name="summary_enable_speak_phrase">Automatically speak the phrase when you practice the exercises.</string>
    <string name="summary_enable_move_to_next_exercise">Automatically move to the next exercise when the result of the exercise is correct.</string>
    <string name="summary_exercises_per_round">Set the number of exercises per round when practice random or less practiced exercises.</string>
    <string name="title_about_me">About Me</string>
    <string name="title_add_exercise">Add New Exercise</string>
    <string name="title_add_tag">Add New Tag</string>
    <string name="title_changelog">Changelog</string>
    <string name="title_collect_statistics">Improve this app</string>
    <string name="title_confirmation">Confirmation</string>
    <string name="title_correct">Correct</string>
    <string name="title_daily_goal">Daily goal</string>
    <string name="title_daily_goal_achieved">DAILY GOAL ACHIEVED</string>
    <string name="title_date_and_time">Date and time</string>
    <string name="title_edit_exercise">Edit Exercise</string>
    <string name="title_edit_tag">Edit Tag</string>
    <string name="title_empty_attempt_list_day">You haven\'t practiced any exercises this day</string>
    <string name="title_empty_attempt_list_exercise">You haven\'t practiced this exercise yet</string>
    <string name="title_empty_exercise_list">You haven\'t created any exercises yet</string>
    <string name="title_empty_tag_list">You haven\'t created any tags yet</string>
    <string name="title_empty_word_list">You haven\'t practiced any exercises yet</string>
    <string name="title_enable_sound">Enable sound</string>
    <string name="title_enable_speak_phrase">Speak the phrase</string>
    <string name="title_enable_move_to_next_exercise">Move to the next exercise</string>
    <string name="title_exercise_correct">CORRECT</string>
    <string name="title_exercise_filter_all">All</string>
    <string name="title_exercise_filter_an_exercise">Practice An Exercise</string>
    <string name="title_exercise_filter_less_practiced">Less Practiced</string>
    <string name="title_exercise_filter_most_failed">Most Failed</string>
    <string name="title_exercise_filter_random">Random</string>
    <string name="title_exercise_incorrect">INCORRECT</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_exercises_per_round">Exercises per round</string>
    <string name="title_friday">FR</string>
    <string name="title_help">Help</string>
    <string name="title_home">Home</string>
    <string name="title_import_exercises">Import Exercises</string>
    <string name="title_incorrect">Incorrect</string>
    <string name="title_monday">MO</string>
    <string name="title_order">Order</string>
    <string name="title_practice">Practice</string>
    <string name="title_practice_phrase">Practice phrase</string>
    <string name="title_practiced_word">Practiced word</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_recognized_text">Recognized text</string>
    <string name="title_result_of_the_corrected_exercise">Result of the corrected exercise</string>
    <string name="title_saturday">SA</string>
    <string name="title_search">Search</string>
    <string name="title_select_a_filter">Select a Filter</string>
    <string name="title_select_an_option">Select an option</string>
    <string name="title_select_one_tag">Select One Tag</string>
    <string name="title_selection">Selection</string>
    <string name="title_settings">Settings</string>
    <string name="title_slash">/</string>
    <string name="title_statistics_attempts">Attempts</string>
    <string name="title_statistics_correct">Correct</string>
    <string name="title_statistics_exercises">Exercises</string>
    <string name="title_statistics_incorrect">Incorrect</string>
    <string name="title_statistics_non_practiced">Non Practiced</string>
    <string name="title_statistics_percentage_practiced">% Practiced</string>
    <string name="title_statistics_practiced">Practiced</string>
    <string name="title_statistics_success_rate">Success Rate</string>
    <string name="title_statistics_time_practicing">Time practicing\n(hours:minutes)</string>
    <string name="title_statistics_total">Total</string>
    <string name="title_stats">Stats</string>
    <string name="title_stats_current_streak">Streak</string>
    <string name="title_sunday">SU</string>
    <string name="title_tag_name">Tag name</string>
    <string name="title_tags">Tags</string>
    <string name="title_thursday">TH</string>
    <string name="title_translated_phrase">Translated phrase</string>
    <string name="title_tuesday">TU</string>
    <string name="title_two_points">:</string>
    <string name="title_wednesday">WE</string>
    <string name="title_week_results">RESULTS OF THE WEEK</string>
    <string name="title_words">Words</string>
    <string name="title_export_exercises">Export Exercises</string>
</resources>
