<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_practice">

        <SeekBarPreference
            android:max="30"
            app:defaultValue="10"
            app:key="@string/pref_exercises_per_round"
            app:min="5"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true"
            app:summary="@string/summary_exercises_per_round"
            app:title="@string/title_exercises_per_round" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_privacy">

        <Preference app:title="@string/pref_privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/clloret/speaking-practice/wiki/Privacy" />
        </Preference>

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_collect_statistics"
            app:summary="@string/summary_collect_statistics"
            app:title="@string/title_collect_statistics" />

    </PreferenceCategory>

</PreferenceScreen>