<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_word_order"
        android:icon="@drawable/ic_sort_wht_24dp"
        android:orderInCategory="101"
        android:title="@string/title_order"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@id/menu_word_order"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_word_sort_alphabetically_asc"
                    android:title="@string/action_short_alphabetically_asc" />
                <item
                    android:id="@+id/menu_word_sort_alphabetically_desc"
                    android:title="@string/action_short_alphabetically_desc" />
                <item
                    android:id="@+id/menu_word_sort_correct"
                    android:title="@string/action_short_correct" />
                <item
                    android:id="@+id/menu_sort_sort_incorrect"
                    android:title="@string/action_short_incorrect" />
            </group>
        </menu>
    </item>
</menu>