<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".exercise.practice.filter.PracticeFilterFragment">

    <Button
        android:id="@+id/btnRandomExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/action_random_exercises" />

    <Button
        android:id="@+id/btnMostFailedExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/action_most_failed_exercises" />

    <Button
        android:id="@+id/btnLessPracticedExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/action_less_practiced_exercises" />

    <Button
        android:id="@+id/btnOneTag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/action_select_tag" />

    <Button
        android:id="@+id/btnAllExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="1"
        android:text="@string/action_all_exercises" />

</LinearLayout>