<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="attemptTime"
            type="String" />

        <variable
            name="entity"
            type="com.clloret.speakingpractice.domain.entities.AttemptWithExercise" />

        <variable
            name="model"
            type="com.clloret.speakingpractice.attempt.list.AttemptListViewModel" />

        <variable
            name="handlers"
            type="com.clloret.speakingpractice.attempt.list.OnClickAttemptHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@{entity.attempt.result ? @color/exercise_correct_background : @color/exercise_incorrect_background}"
        tools:background="@android:color/white">

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/exercise_list_menu_button_description"
            android:focusable="true"
            android:onClick="@{()->handlers.onClickMenu(menuButton, entity)}"
            android:padding="6dp"
            android:src="@drawable/ic_more_vert_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/attemptTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_date_and_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/attemptTimeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{attemptTime}"
            android:textAppearance="@style/AttemptListTime"
            app:layout_constraintEnd_toStartOf="@+id/attemptResultView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attemptTimeTitle"
            tools:text="Time" />

        <TextView
            android:id="@+id/recognizedTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_recognized_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attemptTimeView" />

        <TextView
            android:id="@+id/recognizedTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{model.getCorrectedText(entity.exercise.practicePhrase, entity.attempt.recognizedText)}"
            android:textAppearance="@style/AttemptListText"
            app:layout_constraintEnd_toStartOf="@+id/attemptResultView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recognizedTextTitle"
            tools:text="Recognized Text" />

        <TextView
            android:id="@+id/practiceTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_result_of_the_corrected_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recognizedTextView" />

        <TextView
            android:id="@+id/practiceTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@{model.getCorrectedText(entity.attempt.recognizedText, entity.exercise.practicePhrase)}"
            android:textAppearance="@style/AttemptListText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/attemptResultView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/practiceTextTitle"
            tools:text="Practice Phrase" />

        <ImageView
            android:id="@+id/attemptResultView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/exercise_result_description"
            android:src="@{entity.attempt.result ? @drawable/ic_check_circle_green_24dp :@drawable/ic_error_red_24dp}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/menuButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_check_circle_green_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>